--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,4 @@
 
-
 html{
     box-sizing: border-box;
 }
@@ -10,6 +9,34 @@ html{
     box-sizing: inherit;
 }
 
+
+    $font-stack: Roboto, Roboto-Condensed, Roboto-Slab;
+    $primary-color: #192a56;
+    $footer: #2b0909;
+
+
+
+body{
+    margin: 0;
+    padding: 0;
+    font-family: $font-stack;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    /* color: $main-text-color; */
+}
+
+$container: 1130px;
+
+.container{
+   max-width: ($container );
+   margin: 0 auto;
+   padding: 10px;
+   border: 1px solid white;
+}
+
 @import "./components/header";
 @import "./components/main";
 @import "./components/footer";
+@import "./vars";
