--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,5 +1,62 @@
 @import "../vars";
+@import "../mixins";
 
-header{
-    background-color: blue ;
+.header{
+    background-color: transparentize(#041540, $amount: 0.00);
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: bold;
+    font-style: normal;
+    text-decoration: none;
+
+    &__inner{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-top: 20px;
+
+        &--link img{
+            max-width: 100px;
+            text-decoration: none;
+            text-transform: uppercase;
+            font-size: 40px;
+            max-width: 250px;
+            padding-top: 20px;
+        }
+    
+        &--link img{
+         max-width: 100px;
+         text-decoration: none;
+         text-transform: uppercase;
+         font-size: 40px;
+         max-width: 250px;
+      }
+    
+    }
+    &__address{
+        max-width: 1300px;  
+
+        &--texts{
+            display: flex;
+            list-style: none;
+            align-items: center;
+            flex-wrap: wrap;
+            margin: 0;
+        }
+
+    }
+
+        &__texts--item + &__texts--item{
+            margin-left: 80px;
+        }
+    
+    &__item--location{
+        text-decoration: none;
+        color: #FFEF98;
+        font-size: 14px;
+        font-weight: normal;
+    }    
+    &__item--location:hover{
+        color: rgb(204, 204, 255);
+    }
 }
+
