--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -58,3 +58,70 @@
         }
     }
 }
+@mixin tile {
+    @include font-text("Roboto Condensed");
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 30px;
+
+
+
+
+}
+
+.levels{
+    min-height: 340px;
+
+    &__title{
+        @include tile();
+        text-align: center;
+        margin: 0 auto;
+    }
+    &__schedule{
+        width: 1000px;
+        margin-left: 5%;
+        border-radius: 100px;
+        margin-top: 10px;
+    }
+    
+    &__text{
+        max-width: 900px;
+        min-height: 50px;
+        margin: 1% auto;
+
+        &----strong{
+            font-weight: 600;
+        }
+    }
+}
+hr{
+    max-width: 1110px;
+    margin: 0 auto;
+}
+
+.why{
+    &__title{
+        @include tile();
+        margin-bottom: 0;
+        text-transform: uppercase;
+    }
+    &__block{
+        display: flex;
+        justify-content: space-between;
+    }
+    &__icons{
+        max-width: 300px;
+        min-height: 100px;
+        text-align: center;
+        list-style: none;
+    }
+    &__icon{
+       width: 300px;
+       height: 230px;
+    }
+    &__text--title{
+        font-size: 18px;
+        font-weight: 600;
+    }
+
+}
