--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,4 +1,4 @@
 $main-header-bg-color: #041540;
 $main-texts-color: #fff;
 $main-bg-color: #041540;
-$main-footer-bg-color: #29201C;
+$main-footer-bg-color: #26292e;
