--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,5 +1,96 @@
 @import "../vars";
-
+@mixin footer-icon {
+    display: inline-flex;
+    background-repeat: no-repeat;
+    background-position: center center;
+    width: 40px;
+    height: 40px;
+    background-color: #26292e;
+    border-radius: 50%;
+    margin-left: 5px;
+    
+}
 .footer{
-    background-color: transparentize($main-footer-bg-color, $amount: 0.0);
+    @include font-text("Roboto Slab");
+    background-color: $main-footer-bg-color;
+    color: $main-texts-color;
+
+    @mixin footer-content {
+      float: left;
+      max-width: 250px;
+      min-height: 300px;
+      margin-right: 50px;
+    }
+    &__first-content--icons{
+        &-facebook{
+            @include footer-icon();
+        }
+        &-twitter{
+            @include footer-icon();
+        }
+        &-telegram{
+            @include footer-icon();
+        }
+        &-instagram{
+            @include footer-icon();
+        }
+
+    }
+    
+    &__first-content{
+        @include footer-content();
+      &--logo{
+          max-width: 200px;
+      }
+    }
+    @mixin footer-link {
+        list-style: none;
+        text-decoration: none;
+        color: $main-texts-color;
+    }
+    
+    &__second-content{
+        @include footer-content();
+        &--link,
+        &--link a{
+            @include footer-link();
+        }
+        &--link a:hover{
+            color: #65ffff;
+            transition: all 0.3s ease-out;
+        }
+    }
+    &__third-content{
+        @include footer-content();
+        &--links,
+        &--links a{
+            @include footer-link();
+        }
+        &--links a:hover{
+            color: #65ffff;
+            transition: all 0.3s ease-out;
+        }
+    }
+    &__contact-form{
+        min-height: 300px;
+        &--input,
+        &--textarea,
+        &--button{
+            margin: 5px;
+           height: 40px;
+           background-color: rgb(202, 202, 202);
+           border-radius: 15px;
+        }
+        &--textarea{
+            min-height: 100px;
+        }
+    }
+    &__contact-form--input,
+    &__contact-form--textarea,
+    &__contact-form--button{
+        width: 330px;
+    }
+}
+.copyrightText{
+    text-align: center;
 }
