--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -7,7 +7,7 @@
     &__hero{
         min-height: 600px;
 
-        &--bottom{
+        &--button{
             max-width: 350px;
             min-height: 50px;
             text-align: center;
@@ -20,10 +20,10 @@
             font-weight: normal;
             text-align: center;
             line-height: 40px;
-            margin-top: 70px;
+            margin-top: 50%;
         }
 
-        @mixin bottom-link {
+        @mixin button-link {
             @include font-text("Roboto Condensed");
             font-size: 16px;
             font-weight: normal;
@@ -40,21 +40,22 @@
             
         }
         &--link{
-            @include bottom-link();
+            @include button-link();
         }
-        @mixin bottom-link-hover {
+        @mixin button-link-hover {
             background-color: darken($color: #2285d6, $amount: 3);
             
         }
         &--link:hover{
-            @include bottom-link-hover();
+            @include button-link-hover();
+            transition: all 0.3s ease-out;
         }
 
         &--img{
-            max-width: 850px;
+            max-width: 750px;
             min-height: 600px;
             border-radius: 90% 0% 0% 0%;
-            margin-left: -100px;
+            margin-left: 0 auto;
         }
     }
 }
@@ -107,7 +108,8 @@ hr{
     }
     &__block{
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
+        flex-wrap: wrap;
     }
     &__icons{
         max-width: 300px;
