--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,9 +1,7 @@
 @import "../vars";
-
+@import "../mixins";
 .header{
     background-color: transparentize( $main-header-bg-color , $amount: 0.00);
-    @include font-text("Roboto Condensed");
-    font-weight: 700;
     text-decoration: none;
     margin-bottom: 0;
 
@@ -14,22 +12,18 @@
         padding-top: 20px;
 
         &--link {
-            max-width: 100px;
-            text-decoration: none;
-            text-transform: uppercase;
-            font-size: 40px;
-            max-width: 250px;
+            @include logo();
+            font-weight: 700;
         }
     
         &--logo{
          max-width: 250px;
          padding-top: 20px;
-      }
+        }
     
     }
     &__address{
         max-width: 700px; 
-        @include font-text("Roboto"); 
 
         &--texts{
             display: flex;
@@ -56,13 +50,13 @@
             text-decoration: none;
         }  
         &--location-vector{
-            @include address();
             background-image: url(../images/vector.png);
+            @include address();
         }    
         &--location-tell{
+            background-image: url(../images/tell.png);
             @include address();
             padding: 0px 0px 20px 30px;
-            background-image: url(../images/tell.png);
         }       
         &--location-email{
             @include address();
@@ -75,8 +69,9 @@
     }
 
     &__navbar{
+        @include logo();
         max-width: 1100px;
-        text-transform: uppercase;
+        font-weight: 600;
         font-size: 14px;
         line-height: 19px;
 
