--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,7 +34,8 @@ $container: 1130px;
    padding: 10px;
 }
 
-.footer__first-content--icons{
+
+.footer__icons{
   &-facebook{
   background-image: url(../images/facebook.png);
   }
