--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -56,5 +56,31 @@
             border-radius: 90% 0% 0% 0%;
             margin-left: -100px;
         }
+    
+
+.services{
+    padding: 1em;
+    &__title{
+            color: white;
+            font-size: 24px;
+            text-align: center;
+            padding: 45px;
+        }
+        font-size: 16px;
+            font-weight: normal;
+            line-height: 28px;
+            text-decoration: none;
+            text-transform: uppercase;
+            color: $main-texts-color;
+            background-color: #5AB9EF;
+            max-width: 250px;
+            min-height: 50px;
+            padding: 10px 40px;
+            text-align: center;
+            border-radius: 100px 0px 100px 0px;
+            
     }
+
 }
+}
+
