--- a/scss/components/_services.scss
+++ b/scss/components/_services.scss
@@ -1,100 +1,84 @@
 @import "../vars";
 
+
 $blockwidth: 450px;
 $blockheight: 360px;
 $radius: 35%;
  
 .services{
-    background-color: red;
-
-  .container-service{
-      padding: 2px solid yellow;
-        .services__body {
-        .services__title {
-            @include font-text("Roboto Condensed");
-             font-size: 24px;
-             @include address()
-      }
-      .services__col {
-        .services__parts{
-          .item-services{
-            .item-services__image{
-              display: block;
-            width: $blockwidth;
-              height: $blockheight;
-              border-radius: $radius;
-              .image {
-
-              }
-           .item-services__subtitle{
-              @include font-text("Roboto Condensed");
-              font-size: 24px;
-            color: $main-texts-color;
-            text-align: center;
-
-            }
-            .item-services__button{
-                height: 50px;
-                line-height: 50px;
-                text-align: center;
-                background-color: rgb(81, 81, 241);
-                border-radius: 25% 0 25% 0;
-                text-decoration: none;
-                font-size: 18px;
-                &:hover {
-                    color:blueviolet;
-                }
-
-            }
-            .image {
-                  
-            }
-      
-          }
-          .item-services__subtitle{
-            @include font-text("Roboto Condensed");
+    
+        &__title{
+            font-family: "Roboto Condensed" , Roboto;
+            font-weight: normal;
+            color: white;
             font-size: 24px;
-          color: $main-texts-color;
-          text-align: center;
+            text-align: left;
+            padding-left: 45px;
+                }
+                &__col {
+                    display: grid;
+                grid-column: 1fr 1fr;
+                float: left;
+            }
+           
+                    .image{
+                                width: 450px;
+                                height: 360px;
+                                border-radius: 35%;
+                                padding-left: 50px ;
+                                float: left;
+                            }
+                            .item-services__subtitle{
+                          font-family: "Roboto Condensed" "Roboto-slab";
+                            font-size: 24px;
+                          color: $main-texts-color;
+                          text-align: center;
+                        }
+                        .item-services__button{
+                            height: 50px;
+                         
+                            text-align: center;
+                            background-color: rgb(81, 81, 241);
+                            border-radius: 25% 0 25% 0;
+                            text-decoration: none;
+                            font-size: 18px;
+                            &:hover {
+                                color:blueviolet;
+                            }
+                        }
+                        &__image{
+                            display: block;
+                             width: $blockwidth;
+                            height: $blockheight;
+                            border-radius: $radius;
+                        }
+                        .item-services__subtitle{
+                            @include font-text("Roboto Condensed");
+                            font-size: 24px;
+                          color: $main-texts-color;
+                          text-align: center;
+                        }
+                        .item-services__button{
+                            height: 50px;
+                            line-height: 50px;
+                            text-align: center;
+                            background-color: rgb(81, 81, 241);
+                            border-radius: 25% 0 25% 0;
+                            text-decoration: none;
+                            font-size: 18px;
+                            &:hover {
+                                color:blueviolet;
+                            }
+                        }
 
-          }
-          .item-services__button{
-              height: 50px;
-              line-height: 50px;
-              text-align: center;
-              background-color: rgb(81, 81, 241);
-              border-radius: 25% 0 25% 0;
-              text-decoration: none;
-              font-size: 18px;
-              &:hover {
-                  color:blueviolet;
-              }
-          }
-        }
-      }
-}
-.image {
-                  
-}
+              
+                          }
 
-}
-.item-services__subtitle{
-@include font-text("Roboto Condensed");
-font-size: 24px;
-color: $main-texts-color;
-text-align: center;
+                        }
+                    }
+            
+           
+    
+ 
 
-}
-.item-services__button{
-  height: 50px;
-  line-height: 50px;
-  text-align: center;
-  background-color: rgb(81, 81, 241);
-  border-radius: 25% 0 25% 0;
-  text-decoration: none;
-  font-size: 18px;
-  &:hover {
-      color:blueviolet;
-  }
-}
-}
+     
