--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -33,6 +33,10 @@ $container: 1130px;
    margin: 0 auto;
    padding: 10px;
 }
+/* 
+.header__address--icon{
+  background-image: url(../images/vector.png);
+} */
 
 
 .footer__icons{
