--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -8,6 +8,15 @@
     color: $main-texts-color;
 }
 
+@mixin address {
+    text-align: center;
+    padding: 8px 30px;
+    color: #FFEF98;
+    align-items: center;
+    font-weight: normal;
+    text-decoration: none;
+}  
+
 @mixin button-link {
     @include font-text("Roboto Condensed");
     font-size: 16px;
@@ -28,20 +37,21 @@
     background-color: darken($color: #2285d6, $amount: 3);
     transition: all 0.3s ease-out;
 }
+
 @mixin title {
     @include font-text("Roboto Condensed");
     font-size: 28px;
     font-weight: 700;
     line-height: 30px;
 }
-@mixin footer-icon {
+
+@mixin icons {
     display: inline-flex;
     background-repeat: no-repeat;
     background-position: center center;
     width: 40px;
     height: 40px;
-    background-color: #26292e;
-    border-radius: 50%;
+    background-color: $main-footer-bg-color;
     margin-left: 5px;
 }
 
