--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -23,19 +23,19 @@
         &__icons{
             &-facebook{
                 margin-top: 100px;
-                @include footer-icon();
+                @include icons();
             }
             &-twitter{
                 margin-top: 100px;
-                @include footer-icon();
+                @include icons();
             }
             &-telegram{
                 margin-top: 100px;
-                @include footer-icon();
+                @include icons();
             }
             &-instagram{
                 margin-top: 100px;
-                @include footer-icon();
+                @include icons();
             }
     
         }
