--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -33,10 +33,10 @@ $container: 1130px;
    margin: 0 auto;
    padding: 10px;
 }
-/* 
+
 .header__address--icon{
   background-image: url(../images/vector.png);
-} */
+}
 
 
 .footer__icons{
@@ -53,11 +53,9 @@ $container: 1130px;
   background-image: url(../images/instagram.png);
   }
 }
-  
+
 
 @import "./components/header";
 @import "./components/main";
 @import "./components/footer";
 @import "./vars";
-
-
