--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -8,15 +8,13 @@
     margin-top: 0;
     min-height: 300px;
     &__logo{
-
-        &--link {
+        &-link {
             @include logo();
         }
     
-        &--img{
+        &-img{
          max-width: 250px;
          padding-top: 10px;
-         padding-right: 20px;
         } 
 
     }
@@ -44,38 +42,42 @@
         max-width: 200px;
         min-height: 250px;
         flex-wrap: wrap;
-        margin-right: 70px;
+        margin-right: 20px;
         align-items: center;
-        &--title{
+
+        &-logo{
+            margin-right: 70px;
+        }
+        &-title{
             @include title();
             color: white;
             text-align: center;
         }
         
         &--links,
-        &--link a{
+        &-link a{
             list-style: none;
             text-decoration: none;
             color: $main-texts-color ;
         }
-        &--link :hover{
+        &-link :hover{
             color: #65ffff;
             transition: all 0.3s ease-out;
         }
 
-        &--contact{
+        &-contact{
             background-color: rgb(228, 228, 228);
-            width: 250px;
-            height: 30px;
+            width: 380px;
+            height: 40px;
             margin: 5px;
             border-radius: 10px;
 
             &-textarea{
-                min-height: 70px;
+                min-height: 120px;
             }
             &-button{
                 max-width: 200px;
-                margin: 0 50px ;
+                margin: 0 100px ;
             }
         }
     }
