--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -3,7 +3,7 @@
     
 
 
-.footer{
+/* .footer{
     background-color: $main-footer-bg-color;
     margin-top: 0;
     min-height: 300px;
@@ -85,6 +85,6 @@
 .copytext{
     text-align: center;
     color: white;
-}
+} */
 
 
