--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,5 +1,6 @@
 @import "../vars";
 @import "../mixins";
+/* 
 .header{
     background-color: transparentize( $main-header-bg-color , $amount: 0.00);
     text-decoration: none;
@@ -90,6 +91,6 @@
         }
     }
 }
-
+ */
     
 
