--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin logo {
+/* @mixin logo {
     @include font-text("Roboto Condensed");
     text-decoration: none;
     text-transform: uppercase;
@@ -59,4 +59,4 @@
     width: 500px;
     height: 370px;
     border-radius: 100px;
-}
+} */
