--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -1,4 +1,4 @@
-/* @import "../vars";
+@import "../vars";
 @import "../mixins";
 
 .main{
@@ -161,4 +161,4 @@ hr{
         max-width: 100%;
         border-radius: 200px 0px 200px 0px;
     }
-} */
+}
