--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,34 +1,5 @@
-text{
-  text-decoration: none;
-}
+
 /* 
-html{
-    box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after{
-    box-sizing: inherit;
-}
-
-@mixin font-text(
-  $font-family: "'Roboto','Roboto Condensed','Roboto Slab" sans-serif,
-  $font-size: 14px,
-) {
-  font-family: $font-family;
-  font-size: $font-size;
-  font-weight: normal;
-  font-style: normal;
-  line-height: 24px;
-}
-
-body{
-    margin: 0;
-    padding: 0;
-    @include font-text("Roboto" );
-}
-
 $container: 1130px;
 
 .container{
@@ -61,3 +32,26 @@ $container: 1130px;
 @import "./components/footer";
 @import "./vars";
  */
+ 
+
+@import "./components/header";
+@import "./components/main";
+@import "./components/footer";
+@import "./vars";
+
+html{
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after{
+    box-sizing: inherit;
+}
+
+
+body{
+    margin: 0;
+    padding: 0;
+    @include font-text("Roboto", sans-serif);
+}
