--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,12 +1,8 @@
 @import "../vars";
 @import "../mixins";
-    
 
-
-/* .footer{
+.footer{
     background-color: $main-footer-bg-color;
-    margin-top: 0;
-    min-height: 300px;
     &__logo{
         &-link {
             @include logo();
@@ -18,36 +14,32 @@
         } 
 
     }
-        &__icons{
-            &-facebook{
-                margin-top: 100px;
-                @include icons();
-            }
-            &-twitter{
-                margin-top: 100px;
-                @include icons();
-            }
-            &-telegram{
-                margin-top: 100px;
-                @include icons();
-            }
-            &-instagram{
-                margin-top: 100px;
-                @include icons();
-            }
-    
+    &__icons{
+        &-facebook{
+            background-image: url(../images/facebook.png);
+            margin-top: 100px;
+            @include icons();
         }
-    &__content{
-        display: inline-flex;
-        max-width: 200px;
-        min-height: 250px;
-        flex-wrap: wrap;
-        margin-right: 20px;
-        align-items: center;
+        &-twitter{
+            background-image: url(../images/twitter.png);
+            margin-top: 100px;
+            @include icons();
+        }
+        &-telegram{
+            background-image: url(../images/telegram.png);
+            margin-top: 100px;
+            @include icons();
+        }
+        &-instagram{
+            background-image: url(../images/instagram.png);
+            margin-top: 100px;
+            @include icons();
+        }
 
-        &-logo{
-            margin-right: 70px;
-        }
+    }
+    &__content{
+        min-height: 350px;
+
         &-title{
             @include title();
             color: white;
@@ -67,9 +59,9 @@
 
         &-contact{
             background-color: rgb(228, 228, 228);
-            width: 380px;
+            width: 100%;
             height: 40px;
-            margin: 5px;
+            margin:  5px 0px ;
             border-radius: 10px;
 
             &-textarea{
@@ -77,14 +69,12 @@
             }
             &-button{
                 max-width: 200px;
-                margin: 0 100px ;
             }
+
         }
     }
 }
 .copytext{
     text-align: center;
     color: white;
-} */
-
-
+}    
