--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -14,6 +14,7 @@
         &-logo{
            max-width: 300;
            max-height: 150px;
+           object-fit: cover;
         }
     }
     &__address{
