--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -21,7 +21,7 @@
 }
 
 @mixin address {
-    padding: 8px 30px;
+    margin-left: 20px;
     color: #FFEF98;
     font-weight: normal;
     text-decoration: none;
